[package]
name = "blurhash-wasm"
version = "0.2.0"
authors = ["fpapado <fgpapado@gmail.com>"]
edition = "2018"

description = "A Rust and WASM implementation of the blurhash algorithm"
repository = "https://github.com/fpapado/blurhash-rust-wasm"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3"
thiserror = "1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
image = "0.22.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 's'
lto = true
